syntax = "proto3";
package fx.gov.v1;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/functionx/fx-core/x/gov/types";

// Params defines the fx x/gov module params
message Params {
  string msg_type = 1;

  repeated cosmos.base.v1beta1.Coin min_deposit = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "min_deposit,omitempty"
  ];

  cosmos.base.v1beta1.Coin min_initial_deposit = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "min_initial_deposit,omitempty"
  ];

  google.protobuf.Duration voting_period = 4 [(gogoproto.stdduration) = true];

  string quorum = 5 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.jsontag) = "quorum,omitempty"
  ];

  google.protobuf.Duration max_deposit_period = 6 [
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag) = "max_deposit_period,omitempty"
  ];

  string threshold = 7 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.jsontag) = "threshold,omitempty"
  ];

  string veto_threshold = 8 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.jsontag) = "veto_threshold,omitempty"
  ];
}

message EGFParams {
  cosmos.base.v1beta1.Coin egf_deposit_threshold = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "egf_deposit_threshold,omitempty"
  ];

  string claim_ratio = 2 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.jsontag) = "claim_ratio,omitempty"
  ];
}

message UpdateStore {
  option (gogoproto.goproto_stringer) = false;

  string space = 1;
  string key = 2;
  string old_value = 3;
  string value = 4;
}
